# DATN_ROS

./: README.md  requirement.txt
install/: local_setup.sh  setup.sh
install/custom_interfaces/share/custom_interfaces/: package.sh
install/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/launch_system/share/launch_system/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/launch_system/share/launch_system/launch/: launch_system.launch.xml
install/log/: latest_build
install/module_input/lib/module_input/: node_io_servo  node_io_start_stop_pending  node_io_weigh
install/module_input/share/module_input/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/module_log_file/share/module_log_file/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/module_motor/lib/module_motor/: node_dc_motor  node_dc_servo
install/module_motor/share/module_motor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/module_scanning_interface/lib/module_scanning_interface/: module_scanning_interface
install/module_scanning_interface/share/module_scanning_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/module_send_email/lib/module_send_email/: module_send_email
install/module_send_email/share/module_send_email/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/module_weigh/lib/module_weigh/: module_weigh
log/: latest_build
(+110 files in other folders)
