<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_system</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hoangusb5g@outlook.com.vn">tomccd</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>module_supervisor</exec_depend>
  <exec_depend>module_scanning_interface</exec_depend>
  <exec_depend>module_input</exec_depend>
  <exec_depend>module_weigh</exec_depend>
  <exec_depend>module_motor</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
